--- a/deployment.yml
+++ b/deployment.yml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: python
           image: reg.punto.ir:5000/pytest:latest
-          imagePullPolicy: always
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8080
